--- a/web/html/xui/form/inbound.html
+++ b/web/html/xui/form/inbound.html
@@ -52,6 +52,12 @@
         <a-date-picker :show-time="{ format: 'HH:mm' }" format="YYYY-MM-DD HH:mm"
                        v-model="dbInbound._expiryTime" style="width: 300px;"></a-date-picker>
     </a-form-item>
+    <a-form-item label="加速IP">
+        <a-input v-model.trim="dbInbound.speedIp"></a-input>
+    </a-form-item>
+    <a-form-item label="加速IP端口">
+        <a-input type="number" v-model.number="dbInbound.speedPort"></a-input>
+    </a-form-item>
 </a-form>
 
 <!-- vmess settings -->
