--- a/web/html/xui/inbounds.html
+++ b/web/html/xui/inbounds.html
@@ -271,6 +271,8 @@
                     remark: dbInbound.remark,
                     enable: dbInbound.enable,
                     expiryTime: dbInbound.expiryTime,
+                    speedIp: dbInbound.speedIp,
+                    speedPort: dbInbound.speedPort,
 
                     listen: inbound.listen,
                     port: inbound.port,
@@ -289,6 +291,8 @@
                     remark: dbInbound.remark,
                     enable: dbInbound.enable,
                     expiryTime: dbInbound.expiryTime,
+                    speedIp: dbInbound.speedIp,
+                    speedPort: dbInbound.speedPort,
 
                     listen: inbound.listen,
                     port: inbound.port,
